# Magic-Squares

./: .gitignore  CONTENTS.md  Cargo.toml  README.md  index.html  manifest.json  style.css  sw.js  ui.js
pkg/: magic_squares.d.ts  magic_squares.js  magic_squares_bg.wasm  magic_squares_bg.wasm.d.ts  package.json
src/: debug_failures.rs  generator.rs  lib.rs  main.rs  rng.rs  validator.rs
