[package]
name = "magic_squares"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.108"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Enable Link Time Optimization
codegen-units = 1 # Maximize size reduction optimizations
panic = "abort"   # Remove panic unwinding
strip = true      # Strip symbols

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
